--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -27,7 +27,7 @@
       <img src="{{ page.og_image }}" alt="{{ page.title }}" class="rounded-lg shadow mb-6 w-full">
     {% endif %}
 
-    <div class="prose max-w-none">
+   <div class="prose prose-lg max-w-none">
       {{ content }}
     </div>
   </div>
