--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -6,6 +6,11 @@
   <meta name="description" content="{{ page.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+    tailwind.config = {
+      plugins: [tailwind.typography],
+    };
+  </script>
 </head>
 <body class="bg-white text-gray-800">
 
