--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -25,7 +25,7 @@
 </head>
 <body class="bg-white text-gray-800">
 
-  <div class="max-w-3xl mx-auto px-4 py-8">
+ <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
     <a href="/blog" class="text-blue-600 text-sm underline mb-6 inline-block">← Back to Blog</a>
 
     <h1 class="text-3xl font-bold mb-2">{{ page.title }}</h1>
