--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -6,11 +6,18 @@
   <meta name="description" content="{{ page.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-    tailwind.config = {
-      plugins: [tailwind.typography],
-    };
-  </script>
+<script>
+  tailwind.config = {
+    content: [],
+    theme: {
+      extend: {},
+    },
+    plugins: [window.tailwindcssTypography],
+  };
+</script>
+
+<!-- Load Typography Plugin -->
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/typography@0.5.9/dist/typography.min.js"></script>
 
 <style>
   .prose img {
