--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Load Typography Plugin -->
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/typography@0.5.9/dist/typography.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/typography@0.5.9/dist/typography.min.js"></script>
   
 <script>
   tailwind.config = {
@@ -17,7 +17,7 @@
     },
     plugins: [window.tailwindcssTypography],
   };
-</script>
+</script> -->
 
 
 
