--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -41,14 +41,12 @@
     <p class="text-gray-500 text-sm mb-4">{{ page.date | date: "%B %d, %Y" }}</p>
 
  {% if page.tags %}
-  <div class="mb-6 flex flex-wrap gap-2">
-    {% for tag in page.tags %}
-      <span class="text-xs bg-blue-100 text-blue-700 px-3 py-1 rounded-full shadow">
-        #{{ tag }}
-      </span>
-    {% endfor %}
-  </div>
-{% endif %}
+      <div class="mb-4">
+        {% for tag in page.tags %}
+          <span class="text-xs bg-blue-100 text-blue-700 px-2 py-1 rounded mr-2">#{{ tag }}</span>
+        {% endfor %}
+      </div>
+    {% endif %}
 
     {% if page.og_image %}
       <img src="{{ page.og_image }}" alt="{{ page.title }}" class="rounded-lg shadow mb-6 w-full">
