--- a/_layouts/post-custom.html
+++ b/_layouts/post-custom.html
@@ -87,6 +87,7 @@
     {% endif %}
 
 <div class="blog-content space-y-5 text-base leading-relaxed">
+  <p>Updated</p>
   {{ content }}
 </div>
   </div>
